--- a/public/css/app.css
+++ b/public/css/app.css
@@ -932,6 +932,12 @@ select {
 .w-80 {
   width: 20rem;
 }
+.w-64 {
+  width: 16rem;
+}
+.w-72 {
+  width: 18rem;
+}
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -1303,6 +1309,14 @@ select {
   padding-top: 9rem;
   padding-bottom: 9rem;
 }
+.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1365,6 +1379,9 @@ select {
 }
 .pr-2 {
   padding-right: 0.5rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 .text-left {
   text-align: left;
