--- a/public/css/app.css
+++ b/public/css/app.css
@@ -845,6 +845,12 @@ select {
 .w-2\/3 {
   width: 66.666667%;
 }
+.w-10 {
+  width: 2.5rem;
+}
+.w-36 {
+  width: 9rem;
+}
 .max-w-6xl {
   max-width: 72rem;
 }
