--- a/public/css/app.css
+++ b/public/css/app.css
@@ -622,6 +622,9 @@ select {
 .float-left {
   float: left;
 }
+.m-2 {
+  margin: 0.5rem;
+}
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -1823,6 +1826,15 @@ select {
 }
 @media (min-width: 768px) {
 
+  .md\:m-0 {
+    margin: 0px;
+  }
+
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1837,6 +1849,18 @@ select {
 
   .md\:w-80 {
     width: 20rem;
+  }
+
+  .md\:w-2\/6 {
+    width: 33.333333%;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .md\:grid-cols-2 {
